--- a/estilo.css
+++ b/estilo.css
@@ -1,245 +1,299 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-*{
-    font-family: "Roboto", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
+:root {
+  --title-button-color: rgb(167, 49, 33);
+  --editorial: rgba(255, 49, 20, 0.8);
+  --size-editorial: 0.7rem;
+  --size-manga-tittle: 1rem;
 }
 
-body{
-    background-color: white;
+* {
+  font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 10vw;
-    align-items: center;
+body {
+  background-color: rgb(255, 255, 255);
 }
 
-
-#links a{
-    color: rgb(195, 218, 136);
-    text-decoration: none;
-    font-weight: 500;
+nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0px 10vw 0 5vw;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
 }
 
-
-#links a:hover{
-    border-bottom: solid 2px rgb(195, 218, 136);
+#links a {
+  color: rgb(167, 49, 33);
+  text-decoration: none;
+  font-weight: 600;
+  border-bottom: solid 2px transparent;
 }
 
-#logo{
-    display: flex;
-    align-items: center;  
-    padding: 2.5px 0;
-    margin-bottom: 5px; 
+#links a:hover {
+  border-bottom: solid 2px rgb(167, 49, 33);
 }
 
-#logo img{
-    width: 150px;
-    height: 80px;
+#logo {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding: 1px 70px;
+  margin-bottom: 5px;
 }
 
-#links{
-    display: flex;
-    column-gap: 20px;
+#logo img {
+  display: flex;
+  width: 10rem;
+  justify-content: start;
 }
 
-.header{
-    height: 10vh;
+#links {
+  display: flex;
+  column-gap: 2rem;
 }
 
-.header>h1{
-    color: rgb(0, 0, 1);
-    font-size: 2rem;
+.header {
+  height: 10vh;
 }
 
-#entre{
-    display: flex;
-    width: 100%;
-    height: 2vh;
-    background-color: rgb(195, 218, 136);
-    color: white;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
+.header > h1 {
+  color: rgb(0, 0, 1);
+  font-size: 2rem;
 }
 
-#promo{
-    background-color: rgb(195, 218, 136);
-    text-align: center;
+#promo {
+  background-color: var(--title-button-color);
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
 
-.subtitulo{
-    text-align: center;
+.d-block {
+  transition: transform 0.3s ease;
 }
 
-
-.d-block{
-    transition: transform 0.3s ease;
+.carousel:hover img {
+  transform: scale(1.02);
 }
 
-.carousel:hover img{
-    transform: scale(1.02);
+#info {
+  display: flex;
+  padding: 0 150px;
 }
 
-
-#info{
-    display: flex;
-    padding: 0 150px;
+.cajita {
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  justify-content: center;
 }
 
-
-.cajita{
-    display: flex;
-    align-items: center;
-    column-gap: 20px;
+.cajita p {
+  font-size: 0.75rem;
 }
 
-.cajita p{
-    font-size: 0.75rem;
+.cajita img {
+  width: 30px;
+  height: 30px;
 }
 
-.cajita img{
-    width: 30px;
-    height: 30px;
+#titulo2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid;
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px 0;
 }
 
-#titulo2{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-top: 1px solid;
-    width: 80%;
-    margin: 0 auto;
-    padding: 10px 0;
+#titulo2 h2 {
+  font-size: 2.5rem;
+  color: var(--title-button-color);
 }
 
-#titulo2 h2{
-    font-size: 1.5rem;
-}
-
-.text-focus-in {
-	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) ;
-	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) ;
-}
-
- @-webkit-keyframes text-focus-in {
-    0% {
-      -webkit-filter: blur(12px);
-              filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes text-focus-in {
-    0% {
-      -webkit-filter: blur(12px);
-              filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
-      opacity: 1;
-    }
-  }
-  
 /*ESTILO SECCION MANGAS*/
 
-.container{
-    display: grid;
-    padding-top: 0;
-    width: 100vw;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 4em;
 }
 
-.card{
-    border: none;    
+.card {
+  border: none;
 }
 
-.card-body{
-    display: flex;
-    flex-direction: column;
+.card-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-title {
+  font-size: var(--size-manga-tittle);
 }
 
 /*CARD FOTOS*/
 
-.card-image{
-    width: 200px;
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
+.card-image {
+  width: 200px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
-#card-1{
-    background-image: url(mangas/spyxfamily.webp);
+#card-1 { 
+  background-image: url(mangas/spyxfamily.webp);
 }
 
-#card-2{
-    background-image: url(mangas/Vagabond1.jpg);
+#card-2 {
+  background-image: url(mangas/Vagabond1.jpg);
 }
 
-#card-3{
-    background-image: url(mangas/kimetsu-no-yaiba.webp);
+#card-3 {
+  background-image: url(mangas/kimetsu-no-yaiba.webp);
 }
 
-#card-4{
-    background-image: url(mangas/20thboys.webp);
+#card-4 {
+  background-image: url(mangas/20thboys.webp);
 }
 
-#card-5{
-    background-image: url(mangas/Slam-dunk-.jpg);
+#card-5 {
+  background-image: url(mangas/Slam-dunk-.jpg);
 }
 
-#card-6{
-    background-image: url(mangas/jujutsu-kaisen-10.webp);
+#card-6 {
+  background-image: url(mangas/jujutsu-kaisen-10.webp);
 }
 
-#card-7{
-    background-image: url(mangas/blue-period-01.webp);
+#card-7 {
+  background-image: url(mangas/blue-period-01.webp);
 }
 
-#card-8{
-    background-image: url(mangas/akira.01.webp);
+#card-8 {
+  background-image: url(mangas/akira.01.webp);
 }
 
-.btn{
-    background-color: rgba(255,255,255);
-    color: rgb(0,0,1);
-    border-color: rgb(0, 0, 1);
-    border-radius: 20px;
+.btn {
+  background-color: rgba(255, 255, 255);
+  color: var(--title-button-color);
+  border-color: var(--title-button-color);
+  border-radius: 20px;
 }
 
-.btn:hover{
-    background-color: red;
+.btn:hover {
+  background-color: var(--title-button-color);
+  border-color: var(--title-button-color);
 }
 
+.editorial {
+  font-size: var(--size-editorial);
+  color: var(--editorial);
+}
+
+#colaboradores {
+  display: flex;
+  flex-flow: row wrap;
+  width: 50%;
+  margin: 4em auto;
+  align-items: center;
+  justify-content: center;
+}
+
+#tittle {
+  background-color: var(--title-button-color);
+  color: rgb(255, 255, 255);
+  padding:0.5em;
+  margin-bottom: .5em;
+  font-size: 1.2em;
+}
+
+.row-colabs {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100vw;
+  border: 1px solid black;
+  align-items: center;
+  margin: 0 auto;
+  gap: 50px;
+  padding: 0 1em;
+}
+
+.colaborators img {
+  width: 175px;
+}
+
+#mangainfo{
+  display: flex;
+  width: 100%;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.up, .mid{
+  padding-bottom: 10px;
+}
+
+.informacion{
+  display: flex;
+  width: 75%;
+  gap: 1.5em;
+}
+
+.informacion img{
+  width: 50%;
+  height: auto;
+  align-self: start;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#mangainfo p{
+  text-align: justify;
+}
+
+#mangainfo h3{
+  margin-bottom: 1em;
+  background-color: var(--title-button-color);
+  color: rgb(255, 255, 255);
+  padding: .5em;
+}
+
+#mangainfo h5{
+  color: var(--title-button-color) ;
+}
+
+.down{
+  border-bottom: 1px;
+  border-bottom-color: var(--title-button-color);
+}
 
 /*NOSOTROS*/
 
-#nosotros{
-    width: 100%;
+#nosotros {
+  width: 100%;
 }
 
-#nosotros h1{
-    text-align: center;
+#nosotros h1 {
+  text-align: center;
 }
 
-#nosotros img{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
+#nosotros img {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
 }
 
-footer{
-    background-color: #fff;
+footer {
+  background-color: #fff;
 }
