--- a/estilo.css
+++ b/estilo.css
@@ -13,6 +13,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 body {
@@ -22,8 +23,7 @@ body {
 nav {
   display: flex;
   width: 100%;
-  justify-content: space-between;
-  padding: 0px 10vw 0 5vw;
+  justify-content: safe;
   align-items: center;
   background-color: rgb(255, 255, 255);
 }
@@ -41,9 +41,9 @@ nav {
 
 #logo {
   display: flex;
+  width: 50%;
   align-items: center;
-  justify-content: left;
-  padding: 1px 70px;
+  padding: 0 10rem;
   margin-bottom: 5px;
 }
 
@@ -58,14 +58,28 @@ nav {
   column-gap: 2rem;
 }
 
+.shopping-cart{
+  display: flex;
+  width: 10%;
+  padding: 0 2em;
+  align-items: center;
+}
+
+.shopping-cart img{
+  width: 40px;
+}
+
+.shopping-cart > p{
+  font-size: .8rem;
+  font-weight: 600;  
+  margin-bottom: 0;
+  color: var(--title-button-color);
+}
+
 .header {
   height: 10vh;
 }
 
-.header > h1 {
-  color: rgb(0, 0, 1);
-  font-size: 2rem;
-}
 
 #promo {
   background-color: var(--title-button-color);
@@ -76,6 +90,8 @@ nav {
 .d-block {
   transition: transform 0.3s ease;
 }
+
+
 
 .carousel:hover img {
   transform: scale(1.02);
@@ -121,9 +137,10 @@ nav {
 
 .container {
   display: flex;
+  width: 100%;
   flex-flow: row wrap;
   justify-content: center;
-  gap: 4em;
+  gap: 3em;
 }
 
 .card {
@@ -148,6 +165,8 @@ nav {
   background-size: cover;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  transform: scale(1);
+  transition: .5s;
 }
 
 #card-1 { 
@@ -182,6 +201,28 @@ nav {
   background-image: url(mangas/akira.01.webp);
 }
 
+#card-9 {
+  background-image: url(mangas/bluelock.webp);
+}
+
+#card-10 {
+  background-image: url(mangas/chainsawman01webp.webp);
+}
+
+#card-11 {
+  background-image: url(mangas/pluto01.webp);
+}
+
+#card-12 {
+  background-image: url(mangas/sakamotodays10.jpg);
+}
+
+.card-image:hover{
+  transform: scale(1.05);
+  transition: .5s;
+  transform-origin: bottom;  
+}
+
 .btn {
   background-color: rgba(255, 255, 255);
   color: var(--title-button-color);
@@ -208,13 +249,14 @@ nav {
   justify-content: center;
 }
 
-#tittle {
+.tittle {
   background-color: var(--title-button-color);
   color: rgb(255, 255, 255);
   padding:0.5em;
   margin-bottom: .5em;
   font-size: 1.2em;
 }
+
 
 .row-colabs {
   display: flex;
@@ -276,6 +318,81 @@ nav {
   border-bottom-color: var(--title-button-color);
 }
 
+#mangainfo a{
+  text-decoration: none;
+  color: var(--title-button-color);
+  font-weight: 500;
+  padding-top: 6px ;
+  border-bottom: 2px solid rgb(167, 49, 33) transparent;
+}
+
+#mangainfo a:hover{
+  border-bottom: 2px solid rgb(167, 49, 33);
+}
+
+
+.container2{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer{
+  background-color: rgb(50, 50, 50);
+  padding: 80px 0;  
+}
+
+.footer-row{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-links{
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer-links h4{
+  font-size: 20px;
+  color: rgb(255, 255, 254);
+  margin-bottom: 25px;
+  font-weight: 500;
+  border-bottom: 2px solid rgb(255, 255, 254);
+  padding-bottom: 10px ;
+  display: inline-block;
+}
+
+.footer-links ul li a{
+   font-size: 18px;
+   text-decoration: none;
+   color: rgb(255, 255, 254);
+   display: block;
+   margin-bottom: 15px;
+   transition: all .3s ease;
+}
+
+.footer-links ul li a:hover{
+  color: var(--title-button-color);
+  padding-left: 6px;
+}
+
+.social-link a {
+  display: inline-block;
+  min-height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 254, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: rgb(255, 255, 254);
+  transition: all .5s ease;
+}
+
+.social-link a:hover{
+  background-color: rgb(167, 49, 33);
+}
+
+
 
 /*NOSOTROS*/
 
@@ -293,8 +410,4 @@ nav {
   align-items: center;
   justify-content: center;
   width: 50%;
-}
-
-footer {
-  background-color: #fff;
 }
