--- a/estilo.css
+++ b/estilo.css
@@ -487,7 +487,7 @@ nav {
   font-weight: 400;
   font-size: 25px;
   text-align: center;
-  color: var(--title-button-color);
+  color: rgb(0, 0, 1);
 }
 
 .arriba {
@@ -628,7 +628,6 @@ nav {
 .producto-info h3{
   width: 100%;
   text-align: left;
-
 }
 
 .producto-info h5{
@@ -656,6 +655,10 @@ nav {
   font-size: 20px;
 }
 
+.descuentito{
+  text-decoration-line: line-through;
+  color: rgb(150, 150, 150);
+}
 
 
 /*MANGAS IMAGENES*/
@@ -730,6 +733,81 @@ nav {
   background-size: cover;
 }
 
-.descuentito{
-  text-decoration-line: line-through;
+/*IMAGENES PAGINA OFERTAS*/
+
+
+#manga-15{
+  background-image: url(ofertas/Akane_banashi.webp);
+  background-size: cover;
 }
+
+#manga-16{
+  background-image: url(ofertas/asasdora.webp);
+  background-size: cover;
+}
+
+#manga-17{
+  background-image: url(ofertas/Blue_Period_3.webp);
+  background-size: cover;
+}
+
+#manga-18{
+  background-image: url(ofertas/Blue_Period_5.webp);
+  background-size: cover;
+}
+
+#manga-19{
+  background-image: url(ofertas/Boys_Abyss_02.webp);
+  background-size: cover;
+}
+
+#manga-20{
+  background-image: url(ofertas/Boys_Abyss_03.webp);
+  background-size: cover;
+}
+
+#manga-21{
+  background-image: url(ofertas/Boys_Abyss_05.webp);
+  background-size: cover;
+}
+
+#manga-22{
+  background-image: url(catalogo/punpun1.webp);
+  background-size: cover;
+}
+
+#manga-23{
+  background-image: url(ofertas/carole&tuesday02.webp);
+  background-size: cover;
+}
+
+#manga-24{
+  background-image: url(ofertas/City-Hunter-vol1.webp);
+  background-size: cover;
+}
+
+#manga-25{
+  background-image: url(ofertas/City-Hunter-04.webp);
+  background-size: cover;
+}
+
+#manga-26{
+  background-image: url(ofertas/SC-ZorroTanuki-vol.1.webp);
+  background-size: cover;
+}
+
+#manga-27{
+  background-image: url(ofertas/SC-ZorroTanuki-vol.2.webp);
+  background-size: cover;
+}
+
+#manga-28{
+  background-image: url(ofertas/fullmetal1.webp);
+  background-size: cover;
+}
+
+#manga-29{
+  background-image: url(ofertas/fullmetal2.webp);
+  background-size: cover;
+}
+
