--- a/estilo.css
+++ b/estilo.css
@@ -106,11 +106,21 @@ nav {
   right: 0;
 
   background-color: #fff;
-  width: 400px;
+  width: 500px;
   z-index: 1;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
   border-radius: 10px;
   
+}
+
+.container-cart-products span{
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.container-cart-products p{
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .cart-product{
