--- a/contacto.css
+++ b/contacto.css
@@ -11,6 +11,12 @@
     box-sizing: border-box;
 }
 
+h1{
+    background-color: rgb(229, 229, 229);
+    margin: 1em auto;
+    padding: 1em 4em;
+    font-weight: 400;
+}
 
 form{
     width: 40%;
@@ -33,6 +39,7 @@ h1,p {
 label{
     display: block;
     margin:.5em 0;
+    font-weight: 400;
 }
 
 input,textarea{
@@ -46,8 +53,36 @@ input,textarea{
     display: inline;
 }
 
-#submit{
-    padding: 1em;
+.enlaceterms{
+    text-decoration: none;
+    color: rgb(167, 49, 33);
+}
+
+.enlaceterms:hover{
+    border-bottom: 2px solid rgb(167, 49, 33);
+    
+}
+
+.submit{
+    height: 45px;
+	line-height: 45px;
+	width: 30%;
+	background: rgb(255,255,254);
+	color: rgb(167, 49, 33);
+	font-weight: bold;
+	border: 1px solid rgb(167, 49, 33);
+	border-radius: 3px;
+	cursor: pointer;
+	transition: .3s ease all;
+    margin: 0 auto;
+}
+
+.submit:hover{
     background-color: rgb(167, 49, 33);
-    color: var(--title-button-color);
+    color: rgb(255,255,254);   
+    box-shadow: 3px 0px 30px rgba(163,163,163, 1);
+}
+
+input{
+    border: 1px solid rgb(167, 49, 33);
 }
